Footnotes.js Add Github link

--- a/footnotes.js/sup.html
+++ b/footnotes.js/sup.html
@@ -84,7 +84,7 @@
 </head>
 <body>
 	<div class="box">
-		This is a box<sup data-text="我覺得好得意。你話係唔係？好好玩啊。">1</sup> and... I don't know.<br>
+		This is a box<sup data-text="我覺得好得意。你話係唔係？好好玩啊。">1</sup> and... I don't know. Welcome fork at <a href="https://github.com/Kaiyuan/bootstrap.footnotes.js">Github</a>.<br>
   		<a href="http://taitems.github.com/UX-Lab/BootstrapFootnotes/index.html">bootstrap.footnotes.js</a> no bootstrap!
 	</div>
 	<script src="script.js" type="text/javascript" charset="utf-8"></script>
