--- a/footnotes.js/sup.html
+++ b/footnotes.js/sup.html
@@ -44,7 +44,7 @@
 		background: #fff;
 		border-radius: 6px;
 		box-shadow: 0 1px 5px rgba(0,0,0,.3);
-		position: fixed;
+		position: absolute;
 		vertical-align: middle;
 		word-wrap:break-word;
 		z-index: 100;
