--- a/footnotes.js/sup.html
+++ b/footnotes.js/sup.html
@@ -49,6 +49,10 @@
 		word-wrap:break-word;
 		z-index: 100;
 	}
+	.sup-box * {
+		max-height: 120px;
+		max-width: 100%;
+	}
 	.sup-box:after {
 		content: "";
 		width: 0px;
@@ -58,7 +62,7 @@
 		z-index: 99;
 		position: absolute;
 		bottom: -6px;
-		margin-left: -8px;
+		margin-left: -6px;
 		left: 50%;
 		box-shadow: 2px 2px 3px rgba(0,0,0,.1);
 		transform-style: preserve-3d;
@@ -85,7 +89,7 @@
 <body>
 	<div class="box">
 		This is a box<sup data-text="我覺得好得意。你話係唔係？好好玩啊。">1</sup> and... I don't know. Welcome fork at <a href="https://github.com/Kaiyuan/bootstrap.footnotes.js">Github</a>.<br>
-  		<a href="http://taitems.github.com/UX-Lab/BootstrapFootnotes/index.html">bootstrap.footnotes.js</a> no bootstrap<sup data-text="Only js.">2</sup>!
+  		<a href="http://taitems.github.com/UX-Lab/BootstrapFootnotes/index.html">bootstrap.footnotes.js</a> no bootstrap<sup data-text="Only JS">2</sup>!
 	</div>
 	<script src="script.js" type="text/javascript" charset="utf-8"></script>
 </body>
