--- a/footnotes.js/sup.html
+++ b/footnotes.js/sup.html
@@ -3,68 +3,61 @@
 <head>
 	<meta charset="utf8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" /><!--缩放-->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-	<title>Sup</title>
+	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script> -->
+	<script src="../../../js/jquery-1.9.0.min.js" type="text/javascript" charset="utf-8"></script>
+	<title>Footnotes.js</title>
+	<link href="museo-slab.css" rel="stylesheet" type="text/css" />
 	<style>
-	body {background: #f7f7f7;margin: 0;}
+	body {
+		background: #f5f5f5;
+		margin: 0;
+		text-align: center;
+		font-size: 1em;
+		line-height: 2em;
+		font-family: "museo slab", "museo-slab", "Helvetica Neue", Ubuntu, "WenQuanYi Micro Hei", Helvetica, "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande", "Apple LiGothic", "LiHei Pro", "Hiragino Sans GB W6", "Hiragino Sans GB", "Microsoft JhengHei", "PMingLiU", Arial, sans-serif;
+		-webkit-font-smoothing:antialiased;
+		text-shadow: 0 1px 1px #fff;
+	}
 	a{
 		color: #2C769E;
 		text-decoration: none;
 		outline:none;/* 去掉IE虚线 */
 	}
 	.box {
-		position: fixed;
+		display: inline-block;
+		position: relative;
+		text-align: left;
 		background: #fff;
 		width: 640px;
-		font-size: 1em;
-		font-family: "museo-slab", "museo slab", "Courier New", "Helvetica Neue", Ubuntu, "WenQuanYi Micro Hei", Helvetica, "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande", "Apple LiGothic", "LiHei Pro", "Hiragino Sans GB W6", "Hiragino Sans GB", "Microsoft JhengHei", "PMingLiU", Arial, sans-serif;
-		-webkit-font-smoothing:antialiased;
 		padding: 30px;
 		box-shadow: 0 1px 3px rgba(0,0,0,.3);
-		left: 50%;
-		margin-left: -320px;
-		top: 40%;
 		border-radius: 6px;
 	}
-	sup {
-		width: 19px;
-		height: 10px;
-		display: inline-block;
-		text-align: center;
-		text-indent: -9999px;
-		-webkit-font-smoothing:antialiased;
-		background: url(img/ellipsis.png) no-repeat center center;
-	}
-	.sup-box {
-		max-width: 220px;
-		width: auto;
-		max-height: 120px;
-		padding: 10px;
-		border: 2px solid #000;
-		background: #fff;
-		border-radius: 6px;
-		box-shadow: 0 1px 5px rgba(0,0,0,.3);
+	.box:before {
+		content: "footnotes.js";
 		position: absolute;
-		vertical-align: middle;
-		word-wrap:break-word;
-		z-index: 100;
+		top: -50px;
+		right: 20px;
+		border: 2px solid #000;
+		padding: 10px;
+		height: 16px;
+		font-size: 16px;
+		line-height: 16px;
+		border-radius: 6px;
+		box-shadow: 0 1px 5px rgba(0,0,0,.5),inset 0 0 3px rgba(0,0,0,.3);
+		text-shadow: 0 1px 1px rgba(0,0,0,.1);
+		background: #fff;
 	}
-	.sup-box * {
-		max-height: 120px;
-		max-width: 100%;
-	}
-	.sup-box:after {
+	.box:after {
 		content: "";
 		width: 0px;
 		height: 0px;
 		border: 5px solid #000;
 		border-color: rgba(255,255,255,0) #000 #000 rgba(255,255,255,0);
-		z-index: 99;
 		position: absolute;
-		bottom: -6px;
-		margin-left: -6px;
-		left: 50%;
-		box-shadow: 2px 2px 3px rgba(0,0,0,.1);
+		top: -15px;
+		right: 73px;
+		box-shadow: 1px 1px 2px rgba(0,0,0,.3);
 		transform-style: preserve-3d;
 		-webkit-transform-style: preserve-3d;
 		-moz-transform-style: preserve-3d;
@@ -78,19 +71,65 @@
 	    -moz-transform: rotateZ(45deg);
 	    -o-transform: rotateZ(45deg);
 	}
-	@media screen and (-webkit-min-device-pixel-ratio: 2) {
-		.box sup {
-			background-image: url(img/ellipsis@2x.png);
-			background-size: cover;
-		}
+	h2 {font-weight: 700;}
+	h3, h2 {margin: 0;}
+	ul {margin-top: 0;}
+	pre {
+		box-shadow: inset 0 1px 7px rgba(0,0,0,.2);
+		padding: 5px 15px;
+		border-radius: 6px;
+		background: #d6dce3;
+		font-size: 14px;
+		font-family: "Courier New", Helvetica, sans-serif;
+		text-shadow: 0 1px 1px rgba(0,0,0,.05);
 	}
+	pre span[class="sup"]:hover {background: rgba(255,255,204,.5);color: #000;}
+	footer, footer * {font-size: 12px;color: #bbb;}
+	@media screen and (-webkit-min-device-pixel-ratio: 2) {pre {font-family: "museo slab", "museo-slab", "Helvetica Neue", Ubuntu, "WenQuanYi Micro Hei", Helvetica, "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande", "Apple LiGothic", "LiHei Pro", "Hiragino Sans GB W6", "Hiragino Sans GB", "Microsoft JhengHei", "PMingLiU", Arial, sans-serif;}}
 	</style>
+<link href="footnotes.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-	<div class="box">
-		This is a box<sup data-text="我覺得好得意。你話係唔係？好好玩啊。">1</sup> and... I don't know. Welcome fork at <a href="https://github.com/Kaiyuan/bootstrap.footnotes.js">Github</a>.<br>
-  		<a href="http://taitems.github.com/UX-Lab/BootstrapFootnotes/index.html">bootstrap.footnotes.js</a> no bootstrap<sup data-text="Only JS">2</sup>!
+<!--[if lte IE 9]>
+	<link rel="stylesheet" href="http://kaiyuan.github.com/killie/killie-noimg.css" title="text/css" media="screen"  />
+	<div class="killie">
+		<div class="background"></div>
+		<div class="kbox">
+			<ul>
+				<li id="chrome-box"><a href="https://www.google.com/intl/zh-CN/chrome/browser/" target="_blank"><img src="http://i698.photobucket.com/albums/vv349/sealour/web/chrome_64_zps779df127.png" width="64" height="64" /><br />Chrome</a></li>
+				<li id="firefox-box"><a href="http://www.mozilla.org/en-US/firefox/all/#zh-CN" target="_blank"><img src="http://i698.photobucket.com/albums/vv349/sealour/web/firefox_64_zps602a7ee5.png" width="64" height="64"/><br />FireFox</a></li>
+				<li id="opera-box"><a href="http://www.opera.com/" target="_blank"><img src="http://i698.photobucket.com/albums/vv349/sealour/web/opera_64_zps13ec1943.png" width="64" height="64"/><br />Opera</a></li>
+			</ul>
+		</div>
 	</div>
-	<script src="script.js" type="text/javascript" charset="utf-8"></script>
+<![endif]-->
+	<div class="box">
+		<h2>Bootstrap.footnotes.js No Bootstrap</h2>
+		<p>
+			This is a box<sup class="sup" data-text="很喜歡這種提示方式">1</sup> and... I don't know. <span class="sup" data-text="歡迎">Welcome</span> fork at <a href="https://github.com/Kaiyuan/bootstrap.footnotes.js" class="sup" data-text="本項目的 Github 倉庫">Github</a>.<br>
+	  		<a class="sup" data-text="原始版本需要引用 Bootstrap." href="http://taitems.github.com/UX-Lab/BootstrapFootnotes/index.html">bootstrap.footnotes.js</a> no bootstrap<sup class="sup" data-text="我製作的只有一個 JS 文件">2</sup>!<br>
+	  	</p>
+	  	<h3>EXAMPLE HTML</h3>
+  		<pre lang="html">&lt;span class="<span class="sup" data-text="添加類的名稱">sup</span>" <span class="sup" data-text="內容部分">data-text="This's text."</span>&gt;Text&lt;/span&gt;
+<span class="sup" data-text="SUP 標籤會被修改為圖標">&lt;sup class="sup" data-text="The sup."&gt;1&lt;sup&gt;</span></pre>
+  		<h3>
+  			If a <span class="sup" data-img="../../../images/kaiyuan_boy_184x184.png">picture</span>.
+  		</h3>
+  		<pre lang="html">&lt;span class="sup" <span class="sup" data-text="The picture url.">data-img="url"</span>&gt;Text&lt;/span&gt;</pre>
+		<h3>REQUIREMENTS</h3>
+  		<ul>
+  			<li>jQuery Latest</li>
+  			<li>footnotes.css</li>
+  			<li>footnotes.js</li>
+  		</ul>
+  		<footer>Producer: <a href="http://boxks.com">Kaiyuan</a> </footer>
+	</div>
+	<script src="footontes.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript" charset="utf-8">
+		// The page box
+		var winh = $(document).height();
+		var boxh = $('.box').height();
+		$('.box').css('margin-top',winh/2-boxh/2-30);
+	</script>
 </body>
 </html>
