--- a/footnotes.js/sup.html
+++ b/footnotes.js/sup.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="utf8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" /><!--缩放-->
-	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script> -->
-	<script src="../../../js/jquery-1.9.0.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<title>Footnotes.js</title>
 	<link href="museo-slab.css" rel="stylesheet" type="text/css" />
 	<style>
