--- a/footnotes.js/sup.html
+++ b/footnotes.js/sup.html
@@ -112,7 +112,7 @@
   		<pre lang="html">&lt;span class="<span class="sup" data-text="添加類的名稱">sup</span>" <span class="sup" data-text="內容部分">data-text="This's text."</span>&gt;Text&lt;/span&gt;
 <span class="sup" data-text="SUP 標籤會被修改為圖標">&lt;sup class="sup" data-text="The sup."&gt;1&lt;sup&gt;</span></pre>
   		<h3>
-  			If a <span class="sup" data-img="../../../images/kaiyuan_boy_184x184.png">picture</span>.
+  			If a <span class="sup" data-img="http://farm9.staticflickr.com/8177/7950251026_f6761be7c4_n.jpg">picture</span>.
   		</h3>
   		<pre lang="html">&lt;span class="sup" <span class="sup" data-text="The picture url.">data-img="url"</span>&gt;Text&lt;/span&gt;</pre>
 		<h3>REQUIREMENTS</h3>
