Revised the jQuery

--- a/footnotes.js/sup.html
+++ b/footnotes.js/sup.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<meta charset="utf8">
-	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" /><!--缩放-->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<title>Footnotes.js</title>
 	<link href="museo-slab.css" rel="stylesheet" type="text/css" />
@@ -71,6 +70,7 @@
 	    -o-transform: rotateZ(45deg);
 	}
 	h2 {font-weight: 700;}
+	h3 {font-weight: 500;}
 	h3, h2 {margin: 0;}
 	ul {margin-top: 0;}
 	pre {
@@ -112,7 +112,7 @@
   		<pre lang="html">&lt;span class="<span class="sup" data-text="添加類的名稱">sup</span>" <span class="sup" data-text="內容部分">data-text="This's text."</span>&gt;Text&lt;/span&gt;
 <span class="sup" data-text="SUP 標籤會被修改為圖標">&lt;sup class="sup" data-text="The sup."&gt;1&lt;sup&gt;</span></pre>
   		<h3>
-  			If a <span class="sup" data-img="http://farm9.staticflickr.com/8177/7950251026_f6761be7c4_n.jpg">picture</span>.
+  			<span class="sup" data-img="http://farm9.staticflickr.com/8177/7950251026_f6761be7c4_n.jpg">PICTURE</span>.
   		</h3>
   		<pre lang="html">&lt;span class="sup" <span class="sup" data-text="The picture url.">data-img="url"</span>&gt;Text&lt;/span&gt;</pre>
 		<h3>REQUIREMENTS</h3>
