--- a/footnotes.js/sup.html
+++ b/footnotes.js/sup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf8">
+	<meta charset="utf-8">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<title>Footnotes.js</title>
 	<link href="museo-slab.css" rel="stylesheet" type="text/css" />
@@ -123,7 +123,7 @@
   		</ul>
   		<footer>Producer: <a href="http://boxks.com">Kaiyuan</a> </footer>
 	</div>
-	<script src="footontes.js" type="text/javascript" charset="utf-8"></script>
+	<script src="footnotes.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" charset="utf-8">
 		// The page box
 		var winh = $(document).height();
