--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<header><section class="centerbox"><h1>Developer</h1><a href="http://kaiyuan.github.com">kaiyuan.github.com</a></section></header>
 	<article class="center">
 		<section class="centerbox">
-			<a href="footnotes.js/sup.html"><img src=".https://du26vw.blu.livefilestore.com/y1pTSd-U8iOjkSW3QBQrqtB0opEexu9wNM4qfIIjZ_GCbH26F0oEpK2DSppeVKPMYbDDuND2ozX_NSaJFMcfkkU9Q700C89Ch-I/bootstrap-footnotes-js-no-bootstrap-760.png" width="100%" alt="Footnotes.js"></a>
+			<a href="footnotes.js/sup.html"><img src="https://du26vw.blu.livefilestore.com/y1pTSd-U8iOjkSW3QBQrqtB0opEexu9wNM4qfIIjZ_GCbH26F0oEpK2DSppeVKPMYbDDuND2ozX_NSaJFMcfkkU9Q700C89Ch-I/bootstrap-footnotes-js-no-bootstrap-760.png" width="100%" alt="Footnotes.js"></a>
 			<a href="footnotes.js/sup.html"><h2>Footnotes.js</h2></a>
 			<p>基於 <a class="sup" data-text="原始版本需要引用 Bootstrap." href="http://taitems.github.com/UX-Lab/BootstrapFootnotes/index.html">bootstrap.footnotes.js</a> 效果，從新編寫的一個僅僅依賴 jQuery 的特效。</p>
 		</section>
