--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta chares="utf-8">
 	<title>Developer - Kaiyuan</title>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" chares="utf-8" src="../../../js/jquery-1.9.0.min"></script>
 	<link rel="stylesheet" type="text/css" href="footnotes.js/footnotes.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
