--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</article>
 	<footer>
 		<section class="centerbox">
-			If you any... please donate me.<br>
+			If my project can help to your words, I hope you can give generous donors.<br>
 			如果我的項目能幫助到您的話，希望你能慷概的給予捐助以便創作更多能幫助您的代碼。<br>
 			<ul id="donate">
 				<li id="pp">
