--- a/footnotes.js/sup.html
+++ b/footnotes.js/sup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<title>Footnotes.js</title>
 	<link href="museo-slab.css" rel="stylesheet" type="text/css" />
