--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 			<p>基於 <a class="sup" data-text="原始版本需要引用 Bootstrap." href="http://taitems.github.com/UX-Lab/BootstrapFootnotes/index.html">bootstrap.footnotes.js</a> 效果，從新編寫的一個僅僅依賴 jQuery 的特效。</p>
 		</section>
 	</article>
+	<article class="center">
+		<section class="centerbox">
+			<a href="audio-bar/"><img src="https://du26vw.blu.livefilestore.com/y1perEucdbZ6cNvMMKi_lDDIbkV1LYF2PPbYYlbu45g8seV94CdC84qRbC98rlrBiZhyp2qjdO6uUEhQaiE7ULPVnorRzvU6XDE/audio-bar-760.png" width="100%" alt="Footnotes.js"></a>
+			<a href="audio-bar/"><h2>Audio bar</h2></a>
+			<p>一個音頻播放器，使用 <code>audio</code> 標簽媒體播放，支持設置封面或標題。</p>
+		</section>
+	</article>
 	<footer>
 		<section class="centerbox">
 			If my project can help to your words, I hope you can give generous donors.<br>
