--- a/audio-bar/index.html
+++ b/audio-bar/index.html
@@ -195,6 +195,25 @@ body .github-button:before {
 	  		<div style="text-align: center;"><a class="github-button" href="https://github.com/Kaiyuan/Audio-bar/">Github</a></div>
 		</section>
 	</article>
+	<article class="center">
+		<section class="centerbox">
+	  		    <div id="disqus_thread"></div>
+			    <script type="text/javascript">
+			        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+			        var disqus_shortname = 'kaiyuangithub'; // required: replace example with your forum shortname
+
+			        /* * * DON'T EDIT BELOW THIS LINE * * */
+			        (function() {
+			            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+			            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+			            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+			        })();
+			    </script>
+			    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+			    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+			    
+		</section>
+	</article>
 	<footer style="font-size: 12px;">
 		<section class="centerbox">
 			If my project can help to your words, I hope you can give generous donors.<br>
