--- a/audio-bar/index.html
+++ b/audio-bar/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE hrml>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
 	<title>Audio bar - Kaiyuan</title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" chares="utf-8" src="../../../js/jquery-1.9.0.min.js"></script>
@@ -80,6 +80,7 @@ pre {
 	border-radius: 5px;
 	margin: 1.333em 0 1.333em 0;
 	overflow-x: hidden;
+	font-family: Consolas, "Liberation Mono", Courier, monospace;
 } 
 header, article[class="center"], footer {
 	text-align: center;
