--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE hrml>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
+	<meta charset="utf-8" />
 	<title>Developer - Kaiyuan</title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" chares="utf-8" src="../../../js/jquery-1.9.0.min"></script>
