--- a/footnotes.js/sup.html
+++ b/footnotes.js/sup.html
@@ -19,7 +19,7 @@
 	a{
 		color: #2C769E;
 		text-decoration: none;
-		outline:none;/* 去掉IE虚线 */
+		outline:none;/* IE虚线 */
 	}
 	.box {
 		display: inline-block;
