--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header><section class="centerbox"><h1>Developer</h1><a href="http://kaiyuan.github.com">kaiyuan.github.com</a></section></header>
+	<header><section class="centerbox"><h1>Developer</h1><a href="http://kaiyuan.github.io">kaiyuan.github.io</a></section></header>
 	<article class="center">
 		<section class="centerbox">
 			<a href="footnotes.js/sup.html"><img src="https://du26vw.blu.livefilestore.com/y1pTSd-U8iOjkSW3QBQrqtB0opEexu9wNM4qfIIjZ_GCbH26F0oEpK2DSppeVKPMYbDDuND2ozX_NSaJFMcfkkU9Q700C89Ch-I/bootstrap-footnotes-js-no-bootstrap-760.png" width="100%" alt="Footnotes.js"></a>
@@ -54,7 +54,7 @@
 					<input type="hidden" name="cmd" value="_donations">
 					<input type="hidden" name="business" value="sealour@gmail.com">
 					<input type="hidden" name="lc" value="US">
-					<input type="hidden" name="item_name" value="Kaiyuan.github.com">
+					<input type="hidden" name="item_name" value="kaiyuan.github.io">
 					<input type="hidden" name="no_note" value="0">
 					<input type="hidden" name="currency_code" value="USD">
 					<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_SM.gif:NonHostedGuest">
@@ -70,7 +70,7 @@
 		</section>
 	</footer>
 <!--[if lte IE 9]>
-	<link rel="stylesheet" href="http://kaiyuan.github.com/killie/killie-noimg.css" title="text/css" media="screen"  />
+	<link rel="stylesheet" href="http://kaiyuan.github.io/killie/killie-noimg.css" title="text/css" media="screen"  />
 	<div class="killie">
 		<div class="background"></div>
 		<div class="kbox">
