--- a/footnotes.js/sup.html
+++ b/footnotes.js/sup.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<script src="jquery-1.9.0.min.js" type="text/javascript" charset="utf-8"></script>
 	<title>Footnotes.js</title>
 	<link href="museo-slab.css" rel="stylesheet" type="text/css" />
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="footnotes.js" type="text/javascript" charset="utf-8"></script>
 	<style>
 	body {
 		background: #f5f5f5;
@@ -126,7 +127,6 @@
 		</div>
 	</div>
 <![endif]-->
-	<script src="footnotes.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" charset="utf-8">
 		// The page box
 		var winh = $(document).height();
