Add BitCoin button

--- a/ecp/r2c_0_1.html
+++ b/ecp/r2c_0_1.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>replace to code</title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+	<link rel="stylesheet" href="../footnotes.js/museo-slab.css">
 </head>
 <body>
 	<article>
@@ -115,6 +116,9 @@ function replace() {
 		text-align: center;
 		background: #fff;
 		font-size: 12px;
+	}
+	body, textarea, button {
+		font-family: "museo-slab", "Helvetica Neue", Ubuntu, "WenQuanYi Micro Hei", Helvetica, "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande", "Hiragino Sans GB W6", "Microsoft YaHei", Arial, sans-serif;
 	}
 	a {
 		color: #2C769E;
