--- a/footer.html
+++ b/footer.html
@@ -15,6 +15,13 @@
 			<img alt="" border="0" src="https://www.paypalobjects.com/zh_XC/i/scr/pixel.gif" width="1" height="1">
 			</form>
 		</li>
+		<li id="btc">
+			<span>BitCoin</span>
+			<ul>
+				<li><img src="https://fosbya.blu.livefilestore.com/y2pJdOl6HnlkrfYrCYZ0E9PKw7S0UldR-uNDOsmVsAwtjnKQf5lQaYxTnRN9B435bCFb_StR1TedLfSOKs_-_DoMU2fkL2kRSSjlbBxmmO7m9k/BitCoin.png?psid=1" alt="BitCoin"></li>
+				<li><input id="btc-key" type="text" value="14JkMR68n4PBASB3TgvpjtaPTbfffSwFbW" readonly="readonly"></li>
+			</ul>
+		</li>
 		<li id="ali">
 			<a class="sup" data-text="支付寶" target="_blank" href="https://me.alipay.com/kaiyuan">捐助</a>
 		</li>
