--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8" />
 	<title>Developer - Kaiyuan</title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-	<link rel="stylesheet" type="text/css" href="http://kaiyuan.github.io/footnotes.js/museo-slab.css">
-	<link rel="stylesheet" type="text/css" href="http://kaiyuan.github.io/footnotes.js/footnotes.css">
-	<link rel="stylesheet" type="text/css" href="http://kaiyuan.github.io/css/style.css">
+	<link rel="stylesheet" type="text/css" href="footnotes.js/museo-slab.css">
+	<link rel="stylesheet" type="text/css" href="footnotes.js/footnotes.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<header><section class="centerbox"><h1>Developer</h1><a href="http://kaiyuan.github.io">kaiyuan.github.io</a></section></header>
@@ -64,6 +64,13 @@
 					<img alt="" border="0" src="https://www.paypalobjects.com/zh_XC/i/scr/pixel.gif" width="1" height="1">
 					</form>
 				</li>
+				<li id="btc">
+					<span>BitCoin</span>
+					<ul>
+						<li><img src="https://fosbya.blu.livefilestore.com/y2pJdOl6HnlkrfYrCYZ0E9PKw7S0UldR-uNDOsmVsAwtjnKQf5lQaYxTnRN9B435bCFb_StR1TedLfSOKs_-_DoMU2fkL2kRSSjlbBxmmO7m9k/BitCoin.png?psid=1" alt="BitCoin"></li>
+						<li><input id="btc-key" type="text" value="14JkMR68n4PBASB3TgvpjtaPTbfffSwFbW" readonly="readonly"></li>
+					</ul>
+				</li>
 				<li id="ali">
 					<a class="sup" data-text="支付寶" target="_blank" href="https://me.alipay.com/kaiyuan">捐助</a>
 				</li>
@@ -84,7 +91,7 @@
 		</div>
 	</div>
 <![endif]-->
-	<script type="text/javascript" charset="utf-8" src="http://kaiyuan.github.io/footnotes.js/footnotes.js"></script>
+	<script type="text/javascript" charset="utf-8" src="footnotes.js/footnotes.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/script.js"></script>
 </body>
 </html>
