--- a/audio-bar/index.html
+++ b/audio-bar/index.html
@@ -140,6 +140,62 @@ footer #donate li {float: left;margin: 20px;}
 	background-image: -ms-linear-gradient(top, rgba(253, 170, 46, 1), rgba(252, 125, 36, 1));
 	background-image: linear-gradient(top, rgba(253, 170, 46, 1), rgba(252, 125, 36, 1));
 }
+#btc {
+	position: relative;
+}
+body #btc>span {
+	padding: 3px 20px;
+	color: #fff;
+	/*text-shadow: 0 1px 2px rgba(0,0,0,.2);*/
+	/*border: 1px solid rgba(253, 123, 35, 1);*/
+	border-radius: 6px;
+	background: #f79325;
+	cursor: pointer;
+}
+body #btc ul, body #btc li {
+	padding: 0;
+	margin: 0;
+}
+body #btc ul {
+	color: #fff;
+	display: none;
+	position: absolute;
+	padding: 5px;
+	border-radius: 6px;
+	background: rgba(0,0,0,.8);
+	width: 260px;
+	left: 50%;
+	margin-left: -135px;
+	bottom: 34px;
+	box-shadow: 0 2px 10px rgba(0,0,0,.5);
+}
+body #btc>ul>li {
+	float: left;
+	width: 100%;
+	text-align: center;
+	font-size: 12px;
+}
+#btc input {
+	width: 98%;
+	border: 1px #000 solid;
+	border-radius: 3px;
+	box-shadow: inset 0 1px 5px rgba(0,0,0,.6),0 1px 1px rgba(255,255,255,.2);
+	padding: 1%;
+	margin: 0;
+	font-size: 12px;
+}
+body #btc>ul::before {
+	position: absolute;
+	content: "";
+	border: 6px rgba(0,0,0,.8) solid;
+	border-color: rgba(0,0,0,.8) transparent transparent transparent;
+	left: 50%;
+	margin-left: -6px;
+	bottom: -12px;
+}
+body #btc .block {
+	display: block;
+}
 body .github-button, body .github-button:hover {
 	position: relative;
 	font-weight: 700;
@@ -202,6 +258,12 @@ body .github-button:before {
 	<script>
 		$('#disqus').load("http://kaiyuan.github.io/disqus.html");
 		$('footer').load("http://kaiyuan.github.io/footer.html");
+	    $('#btc>ul').on("click", "#btc-key", function() {
+	    $("#btc-key").select();
+	    });
+	    $('#btc').on("click", "span", function() {
+	        $("#btc>ul").toggleClass('block');
+	    });
 	</script>
 	<link rel="stylesheet" type="text/css" href="audio-bar.css">
 	<script type="text/javascript" chares="utf-8" src="audio-bar.js"></script>
