--- a/keyboard-symbols/index.html
+++ b/keyboard-symbols/index.html
@@ -13,7 +13,7 @@
 		<section>
 			<ul class="list left">
 				<li>
-					<div class="sup" data-text="ilde<br>波浪号">~</div>
+					<div class="sup" data-text="tilde<br>波浪号">~</div>
 					<div class="sup" data-text="grave accent, backquote, backtick<br>反引号">`</div>
 				</li>
 				<li>
