修正最后一排按键错位问题

--- a/keyboard-symbols/index.html
+++ b/keyboard-symbols/index.html
@@ -158,38 +158,38 @@
 					<span></span>
 					<span>fn</span>
 				</li>
-				<li class="textL">
+				<li style="width:38px;" class="textL">
 					<span></span>
 					<span>control</span>
 				</li>
-				<li class="textL">
+				<li style="width:48px;" class="textL">
 					<span>alt</span>
 					<span>option</span>
 				</li>
-				<li class="textR">
+				<li style="width:65px;" class="textR">
 					<span>⌘</span>
 					<span>command</span>
 				</li>
 				<li style="width:170px;"></li>
-				<li class="textL">
+				<li style="width:65px;" class="textL">
 					<span>⌘</span>
 					<span>command</span>
 				</li>
-				<li class="textR">
+				<li style="width:48px;" class="textR">
 					<span>alt</span>
 					<span>option</span>
 				</li>
 				<li id="Arrow-left">
 					<span></span>
-					<span>&#9668;</span>
+					<span class="Arrow-button">&#9668;</span>
 				</li>
-				<li id="Arrow-top-bottom">
+				<li id="Arrow_top-bottom">
 					<span>&#9650;</span>
 					<span>&#9660;</span>
 				</li>
 				<li id="Arrow-right">
 					<span></span>
-					<span>&#9658;</span>
+					<span class="Arrow-button">&#9658;</span>
 				</li>
 			</ul>
 		</section>
