--- a/header.html
+++ b/header.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Developer - Kaiyuan</title>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-	<link rel="stylesheet" type="text/css" href="http://kaiyuan.github.io/footnotes.js/museo-slab.css">
-	<link rel="stylesheet" type="text/css" href="http://kaiyuan.github.io/footnotes.js/footnotes.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" type="text/css" href="http://kaiyuan.github.io/bootstrap.footnotes.js/museo-slab.css">
+	<link rel="stylesheet" type="text/css" href="http://kaiyuan.github.io/bootstrap.footnotes.js/footnotes.css">
 	<link rel="stylesheet" type="text/css" href="http://kaiyuan.github.io/css/style.css">
 </head>
 <body>
