修改项目链接
修改为新的项目关联链接

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<article class="center">
 		<section class="centerbox"><p><img src="https://du26vw.blu.livefilestore.com/y1pTSd-U8iOjkSW3QBQrqtB0opEexu9wNM4qfIIjZ_GCbH26F0oEpK2DSppeVKPMYbDDuND2ozX_NSaJFMcfkkU9Q700C89Ch-I/bootstrap-footnotes-js-no-bootstrap-760.png" alt="Footnotes.js"></p>
 
-			<h2><a href="footnotes.js/sup.html">Footnotes.js</a></h2>
+			<h2><a href="bootstrap.footnotes.js/sup.html">Footnotes.js</a></h2>
 
 			<p>基於 <a class="sup" data-text="原始版本需要引用 Bootstrap." href="http://taitems.github.com/UX-Lab/BootstrapFootnotes/index.html">bootstrap.footnotes.js</a> 效果，從新編寫的一個僅僅依賴 jQuery 的特效。</p>
 		</section>
@@ -22,7 +22,7 @@
 		<section class="centerbox">
 			<p><img src="https://du26vw.blu.livefilestore.com/y1perEucdbZ6cNvMMKi_lDDIbkV1LYF2PPbYYlbu45g8seV94CdC84qRbC98rlrBiZhyp2qjdO6uUEhQaiE7ULPVnorRzvU6XDE/audio-bar-760.png" alt="Audio bar"></p>
 
-			<h2><a href="audio-bar/">Audio bar</a></h2>
+			<h2><a href="Audio-bar/">Audio bar</a></h2>
 
 			<p>一個音頻播放器，使用 <code>audio</code> 標簽媒體播放，支持設置封面或標題。</p>
 		</section>
