Add Keyboard symbols link

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
 	</article>
 	<article class="center">
 		<section class="centerbox">
+			<p><img src="https://du26vw.blu.livefilestore.com/y2p6M7vls24HY51DiHkdHSi7GhaQxenTHhbITt7pDtUYheaqAGCHDMaSV6vWePeVZoR387Rg4v_x1aFJc4XMgJ5P6u9y7SLiAqKqkTmg9ahdVk/keyboard-symbols%402x.png" alt="Keyboard symbols" width="100%"></p>
+
+			<h2><a href="keyboard-symbols/">Keyboard symbols</a></h2>
+
+			<p>
+				键盘符号中英文名称表。<br>
+				根据 <a href="http://weih.github.io/symbolinenglish/">http://weih.github.io/symbolinenglish/</a>	 整理。
+			</p>
+		</section>
+	</article>
+	<article class="center">
+		<section class="centerbox">
 	  		    <div id="disqus_thread"></div>
 			    <script type="text/javascript">
 			        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
