footnotes.js link
修改 footnotes.js 链接

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		</div>
 	</div>
 <![endif]-->
-	<script type="text/javascript" charset="utf-8" src="footnotes.js/footnotes.js"></script>
+	<script type="text/javascript" charset="utf-8" src="bootstrap.footnotes.js/footnotes.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/script.js"></script>
 </body>
 </html>
