--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 	<meta charset="utf-8" />
 	<title>Developer - Kaiyuan</title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-	<link rel="stylesheet" type="text/css" href="bootstrap.footnotes.js/museo-slab.css">
+	<link rel="stylesheet" type="text/css" href="css/museo-slab.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap.footnotes.js/footnotes.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script type="text/javascript" charset="utf-8" src="bootstrap.footnotes.js/footnotes.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/script.js"></script>
 </head>
 <body>
-	<header><section class="centerbox"><h1>Developer</h1><a href="http://kaiyuan.github.io">kaiyuan.github.io</a></section></header>
+	<header><section class="centerbox"><h1><img src="images/lab.svg" alt="Developer" width="64" height="64"></h1><a href="http://kaiyuan.github.io">kaiyuan.github.io</a></section></header>
 	<article class="center">
 		<section class="centerbox"><p><img src="https://du26vw.blu.livefilestore.com/y1pTSd-U8iOjkSW3QBQrqtB0opEexu9wNM4qfIIjZ_GCbH26F0oEpK2DSppeVKPMYbDDuND2ozX_NSaJFMcfkkU9Q700C89Ch-I/bootstrap-footnotes-js-no-bootstrap-760.png" alt="Footnotes.js"></p>
 
@@ -103,7 +105,5 @@
 		</div>
 	</div>
 <![endif]-->
-	<script type="text/javascript" charset="utf-8" src="bootstrap.footnotes.js/footnotes.js"></script>
-	<script type="text/javascript" charset="utf-8" src="js/script.js"></script>
 </body>
 </html>
