Add fork banner

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 			by <a href="http://boxks.com">Kaiyuan</a>
 		</section>
 	</footer>
+	<div id="fork"><a href="https://github.com/Kaiyuan/Safari-Extensions">Fork on Github</a></div>
 <!--[if lte IE 9]>
 	<link rel="stylesheet" href="http://kaiyuan.github.io/killie/killie-noimg.css" title="text/css" media="screen"  />
 	<div class="killie">
