--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<title>Developer - Kaiyuan</title>
 	<link rel="shortcut icon" href="favicon.ico">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="stylesheet" type="text/css" href="css/museo-slab.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap.footnotes.js/footnotes.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
