--- a/index.html
+++ b/index.html
@@ -63,33 +63,7 @@
 	</article>
 	<footer>
 		<section class="centerbox">
-			If my project can help to your words, I hope you can give generous donors.<br>
-			如果我的項目能幫助到您，希望你能慷概的給予捐助以便創作更多能幫助您的代碼。<br>
-			<ul id="donate">
-				<li id="pp">
-					<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-					<input type="hidden" name="cmd" value="_donations">
-					<input type="hidden" name="business" value="sealour@gmail.com">
-					<input type="hidden" name="lc" value="US">
-					<input type="hidden" name="item_name" value="kaiyuan.github.io">
-					<input type="hidden" name="no_note" value="0">
-					<input type="hidden" name="currency_code" value="USD">
-					<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_SM.gif:NonHostedGuest">
-					<input class="sup" data-text="Paypal" type="submit" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！" value="Donate">
-					<img alt="" border="0" src="https://www.paypalobjects.com/zh_XC/i/scr/pixel.gif" width="1" height="1">
-					</form>
-				</li>
-				<li id="btc">
-					<span>BitCoin</span>
-					<ul>
-						<li><img src="https://fosbya.blu.livefilestore.com/y2pJdOl6HnlkrfYrCYZ0E9PKw7S0UldR-uNDOsmVsAwtjnKQf5lQaYxTnRN9B435bCFb_StR1TedLfSOKs_-_DoMU2fkL2kRSSjlbBxmmO7m9k/BitCoin.png?psid=1" alt="BitCoin"></li>
-						<li><input id="btc-key" type="text" value="14JkMR68n4PBASB3TgvpjtaPTbfffSwFbW" readonly="readonly"></li>
-					</ul>
-				</li>
-				<li id="ali">
-					<a class="sup" data-text="支付寶" target="_blank" href="https://me.alipay.com/kaiyuan">捐助</a>
-				</li>
-			</ul><br>
+			<iframe src="donate/index.html?item=kaiyuan.github,io&class=code" style="overflow-x:hidden;overflow-y:hidden; border:0xp none #fff; min-height:280px;"  frameborder="0" scrolling="no" class="left100"></iframe><br>
 			by <a href="http://boxks.com">Kaiyuan</a>
 		</section>
 	</footer>
