修改显示的文字

--- a/donate/index.html
+++ b/donate/index.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
 	<script>
-
 		String.prototype.getQuery = function(name) {  
 		　　var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");  
 		　　var r = this.substr(this.indexOf("\?")+1).match(reg);  
@@ -25,7 +24,7 @@
 		
 		<script>
 		if (ifso) {
-			document.write('<div id="Description" class="fs12 left absolute"><p>If my project can help to your words, I hope you can give generous donors.<br>如果我的項目能幫助到您，希望你能慷概的給予捐贈，以便創作更多能幫助您的代碼。</p></div>');
+			document.write('<div id="Description" class="left absolute"><p>听说，你想请我喝咖啡？</p></div>');
 		};
 		</script>
 		
